CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(STAGE_ENZO)

set(CMAKE_MODULE_PATH               "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(CMAKE_CXX_FLAGS                 "${CMAKE_CXX_FLAGS} -std=c++14 -DIL_STD -m64 -Wall")
set(CMAKE_CXX_FLAGS_DEBUG           "${CMAKE_CXX_FLAGS_DEBUG} -Og -ggdb")
set(CMAKE_CXX_FLAGS_RELEASE         "${CMAKE_CXX_FLAGS_RELEASE} -DNDEBUG -O3 -flto")
set(CMAKE_INCLUDE_SYSTEM_FLAG_CXX   "-isystem ")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  "${CMAKE_CURRENT_SOURCE_DIR}/build")

SET(EXECUTABLE_OUTPUT_PATH	${CMAKE_BINARY_DIR})
SET(   LIBRARY_OUTPUT_PATH	${CMAKE_BINARY_DIR})

SET(USE_MPI FALSE)
SET(SOLVER_CPLEX TRUE)
SET(SOLVER_XPRESS TRUE)

IF( USE_MPI )
	SET(CMAKE_CXX_COMPILER mpicxx)
ENDIF( USE_MPI )
MESSAGE("USE_MPI is ${USE_MPI}")
IF( WIN32 )
#	SET( CMAKE_CONFIGURATION_TYPES "Debug;Release;" CACHE STRING "limited configs" FORCE)
#	SET( CMAKE_CXX_FLAGS_DEBUG          "/D_DEBUG /MTd /Zi /Ob0 /Od /RTC1" )
#	SET( CMAKE_CXX_FLAGS_RELEASE        "/MT /O2 /Ob2 /D NDEBUG")
ELSE()
	SET ( CMAKE_BUILD_TYPE "RELEASE"     )
#	SET ( CMAKE_BUILD_TYPE "DEBUG"     )
#	IF( WITH_DEBUG )
#		SET ( CMAKE_BUILD_TYPE "DEBUG"     )
#	ELSE( WITH_DEBUG )GENDIOR
#		SET ( CMAKE_BUILD_TYPE "RELEASE"     )
#	ENDIF( WITH_DEBUG )
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -DNDEBUG")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pedantic -fmessage-length=0 -fPIC" )
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-conversion -Wno-sign-compare")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-strict-aliasing -Wno-unused-parameter")
ENDIF( WIN32 )

MESSAGE("CMAKE_BINARY_DIR : ${CMAKE_BINARY_DIR}")
MESSAGE("CMAKE_SOURCE_DIR : ${CMAKE_SOURCE_DIR}")
MESSAGE("CMAKE_C_COMPILER_VERSION : ${CMAKE_C_COMPILER_VERSION}")
MESSAGE("CMAKE_CXX_COMPILER_VERSION : ${CMAKE_CXX_COMPILER_VERSION}")

IF(SOLVER_XPRESS)
	MESSAGE("XPRESSDIR is $ENV{XPRESSDIR}")
ENDIF(SOLVER_XPRESS)

MESSAGE("BOOSTDIR  is $ENV{BOOSTDIR}")
INCLUDE_DIRECTORIES(./src_cpp)
IF(SOLVER_XPRESS)
	INCLUDE_DIRECTORIES($ENV{XPRESSDIR}/include)
ENDIF(SOLVER_XPRESS)

IF( USE_MPI )
	IF(WIN32)
		INCLUDE_DIRECTORIES($ENV{BOOSTDIR} ./src_mpi $ENV{MSMPI_INC} $ENV{MSMPI_INC}/x64)
		LINK_DIRECTORIES($ENV{BOOSTDIR}/stage/lib $ENV{MSMPI_LIB64} )
		IF(SOLVER_XPRESS)
			LINK_DIRECTORIES($ENV{XPRESSDIR}/lib)
		ENDIF(SOLVER_XPRESS)
	ELSE(WIN32)
		INCLUDE_DIRECTORIES($ENV{BOOSTDIR} ./src_mpi)
		LINK_DIRECTORIES($ENV{BOOSTDIR}/stage/lib)
		IF(SOLVER_XPRESS)
			LINK_DIRECTORIES($ENV{XPRESSDIR}/lib)
		ENDIF(SOLVER_XPRESS)
	ENDIF(WIN32)
ENDIF( USE_MPI )

IF(SOLVER_XPRESS)
	LINK_DIRECTORIES($ENV{XPRESSDIR}/lib)
ENDIF(SOLVER_XPRESS)

IF(SOLVER_CPLEX)
	find_package(Cplex)
	include_directories(SYSTEM ${CPLEX_INCLUDE_DIRS})
ENDIF(SOLVER_CPLEX)

FILE(
	GLOB
	SEQUENTIAL_FILES
	./src_cpp/*.cc
	./src_cpp/*.cpp
	./src_cpp/*.h  
	./src_cpp/*.hxx
)
ADD_LIBRARY(sequentialcore STATIC ${SEQUENTIAL_FILES} )
IF( USE_MPI )
	FILE(
		GLOB
		MPI_FILES
		./src_mpi/*.cc
		./src_mpi/*.cpp
		./src_mpi/*.h  
		./src_mpi/*.hxx
	)
	ADD_LIBRARY(mpicore STATIC ${MPI_FILES} )
ENDIF( USE_MPI )

#ADD_EXECUTABLE(test_sur_les_set ./src_enzo_test/test_sur_les_set.cpp)
#TARGET_LINK_LIBRARIES(test_sur_les_set sequentialcore ${CPLEX_LIBRARIES} dl)

#ADD_EXECUTABLE(merge_mps ./exe_cpp/merge_mps.cpp)
#TARGET_LINK_LIBRARIES(merge_mps sequentialcore xprs ${CPLEX_LIBRARIES} dl)

IF( USE_MPI )
	ADD_EXECUTABLE(bendersmpi  exe_mpi/main.cpp)
	IF(WIN32)
		IF(SOLVER_XPRESS)
			TARGET_LINK_LIBRARIES(bendersmpi sequentialcore mpicore xprs msmpi libboost_serialization-vc141-mt-x64-1_67)
		ENDIF(SOLVER_XPRESS)
		IF(SOLVER_CPLEX)
			TARGET_LINK_LIBRARIES(bendersmpi sequentialcore mpicore msmpi libboost_serialization-vc141-mt-x64-1_67 ${CPLEX_LIBRARIES} dl)
		ENDIF(SOLVER_CPLEX)
	ELSE(WIN32)
		IF(SOLVER_XPRESS)
			TARGET_LINK_LIBRARIES(bendersmpi sequentialcore mpicore xprs boost_serialization boost_mpi-mt.so)
		ENDIF(SOLVER_XPRESS)
		IF(SOLVER_CPLEX)
			TARGET_LINK_LIBRARIES(bendersmpi sequentialcore mpicore boost_serialization boost_mpi-mt.so ${CPLEX_LIBRARIES} dl)
		ENDIF(SOLVER_CPLEX)	
	ENDIF(WIN32)
	
ELSE( USE_MPI )
	ADD_EXECUTABLE(benderssequential exe_cpp/main.cpp)
	IF(SOLVER_XPRESS)
		TARGET_LINK_LIBRARIES(benderssequential sequentialcore xprs)	
	ENDIF(SOLVER_XPRESS)
	IF(SOLVER_CPLEX)
		TARGET_LINK_LIBRARIES(benderssequential sequentialcore ${CPLEX_LIBRARIES} dl)
	ENDIF(SOLVER_CPLEX)	
ENDIF( USE_MPI )
